--- a/80-countries-in-regions.qmd
+++ b/80-countries-in-regions.qmd
@@ -90,7 +90,7 @@ country_codes <- tmp |>
         )
 
 ## save cleaned data
-save_data_file("chap80", country_codes, "country_codes.rds")
+pb_save_data_file("chap80", country_codes, "country_codes.rds")
 
 ```
 
