--- a/81-countries-and-variables.qmd
+++ b/81-countries-and-variables.qmd
@@ -72,7 +72,7 @@ summary_table <- readxl::read_xlsx(destfile)
 
 
 ## save cleaned data
-save_data_file("chap81", summary_table, "summary_table.rds")
+pb_save_data_file("chap81", summary_table, "summary_table.rds")
 
 ```
 
