--- a/09-well-being.qmd
+++ b/09-well-being.qmd
@@ -56,26 +56,51 @@ fig-alt="alt-text" fig-align="center" width="80%"}
 :::::
 ::::::
 
+
+
 ## Import data
 
-The first step is to find the life-evaluation data and to store the file for further R processing. I will store the files in my "whr" folder inside my "data" folder. (As I do not the chapter number of the final publication I am not going to use "chapXX" ("XX" standing for the chapter number) but "whr" as my folder name.)
+### Folder and file oganization
+
+The first step is to find the life-evaluation data for each year and to store the files for further R processing. I will store the files in the "whr" folder inside my "data" folder. (As I do not know the chapter number for this well-being chapter, I am not going to use my traditional  format "chapXX" ("XX" standing for the chapter number) but just "whr" as folder name.)
+
+The `pb_create_folder()` function in the following code chunk checks if the folder already exists. If this is the case it leaves it untouched, otherwise it creates the folder at the desired path. The code for my private functions are in the file `helper.R` inside the `R` folder at root level of this working directory.
+
+:::::{.my-resource}
+:::{.my-resource-header}
+:::::: {#lem-folder-structure}
+: File Organization for WHR files
+::::::
+:::
+::::{.my-resource-container}
+
+I will organize the many files into several subfolders:
+
+- **/data/**: main folder for all data files related this project
+- **/data/whr/**: files related to the analysis of the the World Happiness Reports
+- **/data/whr/excel/**: untouched original Excel files resp. the one PDF for the 2013 report (to prevent possible link rot at the original source)
+- **/data/whr/rds/**: R objects of the original data of the Excel files
+- **/data/whr/analysis/**: changed or created R objects during the analysis process
+- **/data/whr/2013-coord/** R object containing page coordinates of the 2013 PDF file
+
 
 :::::{.my-r-code}
 :::{.my-r-code-header}
 :::::: {#cnj-create-whr-folder}
-: Create folder for data files of the World Happiness Reports
+: Create folders for data files of the World Happiness Reports
 ::::::
 :::
 ::::{.my-r-code-container}
 
 
-The function `pb_create_folder()` checks if the folder already exists. If this is the case it leaves it untouched, otherwise it creates the folder at the desired path.
 
 ```{r}
-#| label: create-whr-folder
+#| label: create-whr-folders
+#| code-fold: show
 
 pb_create_folder(base::paste0(here::here(), "/data/"))
 pb_create_folder(base::paste0(here::here(), "/data/whr"))
+pb_create_folder(base::paste0(here::here(), "/data/whr/ladder"))
 ```
 
 (*For this R code chunk is no output available*)
@@ -84,12 +109,19 @@ pb_create_folder(base::paste0(here::here(), "/data/whr"))
 ::::
 :::::
 
+::::
+:::::
+
+### Download and save WHR data
+
+
 The next code chunks combines two actions for each year:
 
 1. At first I had to get the URL manually. Starting from the [WHR-Analysis website](https://worldhappiness.report/analysis/) I had to open each year and to look for the "Appendices & data" link. There I had to look for a data file.
 2. After downloading all data file as Excel files I had to inspect them manually to find the sheet with the Cantril ladder data. I had to note the sheet number for the appropriate download. (Default is sheet 1). Additionally I had to note the file format "xls" or "xlsx" for each year to call the correct function `readxl::read_xls` or `readxl::read_xlsx`. (I refrained from the format guessing with the more general `readxl::read_exel()` function.) Furthermore I had to skip the first three comment lines in the 2015 dataset.
 
 I am using the utility package [downloader](https://cran.r-project.org/web/packages/downloader/index.html) by Winston Chang because it provides a wrapper for the `utils::download.file()` function with the advantage that the download procedure works on Windows, Mac OS X, and other Unix-like platforms.
+
 
 
 
@@ -256,14 +288,16 @@ The difficulties 1 and 2 arise because `tabulapdf` works page-oriented. Difficul
 
 The solution I found is an [interactive table extraction](https://docs.ropensci.org/tabulapdf/articles/tabulapdf.html#interactive-table-extraction) for each page with the `tabulapdf::locate_area()` function and to select only the figures without columns names as demonstrated in the [use case section](https://docs.ropensci.org/tabulapdf/articles/tabulapdf.html#use-case-covid-19-treatments-in-italy) of the vignette.
 
+Tidying the dataset for WHR 2013 includes to join country names if the span two lines into one column name and to delete the empty lines consisting of just NA's. Note also that there is a data entry error in the original PDF (see: page 5, second last line, column 6 from the right) that has to be corrected.
 
-:::::{.my-example}
-:::{.my-example-header}
+
+:::::{.my-code-collection}
+:::{.my-code-collection-header}
 :::::: {#exm-extract-whr-table-data-2013}
 : Extract WHR 2013 Table Data from PDF and Tidy Data
 ::::::
 :::
-::::{.my-example-container}
+::::{.my-code-collection-container}
 
 ::: {.panel-tabset}
 
@@ -311,7 +345,7 @@ pb_save_data_file("whr/2013-coord", page6, "page6.rds")
 
 ```
 
-
+(*For this R code chunk is no output available*)
 ::::
 :::::
 
@@ -327,8 +361,6 @@ pb_save_data_file("whr/2013-coord", page6, "page6.rds")
 ::::{.my-r-code-container}
 
 **Run the code just once manually**. It will restore the coordinates of the table data for the WHR 2013 PDF, tidy the dataset and save the result as R data object in `.rds` format.
-
-Tidying the dataset includes to combine country names if the span two lines and to delete the empty lines with the many NA's. Note also that there is a data entry error in the original PDF (see: page 5, second last line, column 6 from the right) that has to be corrected.
 
 ```{r}
 #| label: tidy-pdf-data
@@ -411,13 +443,13 @@ pb_save_data_file("whr", WHR_data_2013, "WHR_data_2013.rds")
 
 ## Inspect Data
 
-:::::{.my-example}
-:::{.my-example-header}
+:::::{.my-code-collection}
+:::{.my-code-collection-header}
 :::::: {#exm-inspect-whr-data}
 : Inspect WHR data that contains ladder score and ranking
 ::::::
 :::
-::::{.my-example-container}
+::::{.my-code-collection-container}
 
 ::: {.panel-tabset}
 
@@ -430,14 +462,11 @@ pb_save_data_file("whr", WHR_data_2013, "WHR_data_2013.rds")
 ::::::
 :::
 ::::{.my-r-code-container}
-::: {#lst-glimpse-whr-data-2024}
 ```{r}
 #| label: glimpse-whr-data-2024
 
 dplyr::glimpse(base::readRDS("data/whr/WHR_data_2024.rds"))
 ```
-Glimpse at ladder score 2024
-:::
 
 ::::
 :::::
@@ -452,15 +481,13 @@ Glimpse at ladder score 2024
 ::::::
 :::
 ::::{.my-r-code-container}
-::: {#lst-glimpse-whr-data-2023}
+
 ```{r}
 #| label: glimpse-whr-data-2023
 
 dplyr::glimpse(base::readRDS("data/whr/WHR_data_2023.rds"))
 ```
 
-Glimpse at ladder score 2023
-:::
 
 ::::
 :::::
@@ -474,15 +501,13 @@ Glimpse at ladder score 2023
 ::::::
 :::
 ::::{.my-r-code-container}
-::: {#lst-glimpse-whr-data-2022}
+
 ```{r}
 #| label: glimpse-whr-data-2022
 
 dplyr::glimpse(base::readRDS("data/whr/WHR_data_2022.rds"))
 ```
 
-Glimpse at ladder score 2022
-:::
 
 ::::
 :::::
@@ -496,15 +521,13 @@ Glimpse at ladder score 2022
 ::::::
 :::
 ::::{.my-r-code-container}
-::: {#lst-glimpse-whr-data-2021}
+
 ```{r}
 #| label: glimpse-whr-data-2021
 
 dplyr::glimpse(base::readRDS("data/whr/WHR_data_2021.rds"))
 ```
 
-Glimpse at ladder score 2021
-:::
 
 ::::
 :::::
@@ -518,15 +541,13 @@ Glimpse at ladder score 2021
 ::::::
 :::
 ::::{.my-r-code-container}
-::: {#lst-glimpse-whr-data-2020}
+
 ```{r}
 #| label: glimpse-whr-data-2020
 
 dplyr::glimpse(base::readRDS("data/whr/WHR_data_2020.rds"))
 ```
 
-Glimpse at ladder score 2020
-:::
 
 ::::
 :::::
@@ -540,15 +561,14 @@ Glimpse at ladder score 2020
 ::::::
 :::
 ::::{.my-r-code-container}
-::: {#lst-glimpse-whr-data-2019}
+
 ```{r}
 #| label: glimpse-whr-data-2019
 
 dplyr::glimpse(base::readRDS("data/whr/WHR_data_2019.rds"))
 ```
 
-Glimpse at ladder score 2019
-:::
+
 
 ::::
 :::::
@@ -562,15 +582,13 @@ Glimpse at ladder score 2019
 ::::::
 :::
 ::::{.my-r-code-container}
-::: {#lst-glimpse-whr-data-2018}
+
 ```{r}
 #| label: glimpse-whr-data-2018
 
 dplyr::glimpse(base::readRDS("data/whr/WHR_data_2018.rds"))
 ```
 
-Glimpse at ladder score 2018
-:::
 
 ::::
 :::::
@@ -584,15 +602,13 @@ Glimpse at ladder score 2018
 ::::::
 :::
 ::::{.my-r-code-container}
-::: {#lst-glimpse-whr-data-2017}
+
 ```{r}
 #| label: glimpse-whr-data-2017
 
 dplyr::glimpse(base::readRDS("data/whr/WHR_data_2017.rds"))
 ```
 
-Glimpse at ladder score 2017
-:::
 
 ::::
 :::::
@@ -606,15 +622,14 @@ Glimpse at ladder score 2017
 ::::::
 :::
 ::::{.my-r-code-container}
-::: {#lst-glimpse-whr-data-2016}
+
 ```{r}
 #| label: glimpse-whr-data-2016
 
 dplyr::glimpse(base::readRDS("data/whr/WHR_data_2016.rds"))
 ```
 
-Glimpse at ladder score 2016
-:::
+
 
 ::::
 :::::
@@ -629,15 +644,13 @@ Glimpse at ladder score 2016
 ::::::
 :::
 ::::{.my-r-code-container}
-::: {#lst-glimpse-whr-data-2015}
+
 ```{r}
 #| label: glimpse-whr-data-2015
 
 dplyr::glimpse(base::readRDS("data/whr/WHR_data_2015.rds"))
 ```
 
-Glimpse at ladder score 2015
-:::
 
 ::::
 :::::
@@ -651,7 +664,7 @@ Glimpse at ladder score 2015
 ::::::
 :::
 ::::{.my-r-code-container}
-::: {#lst-glimpse-whr-data-2013}
+
 ```{r}
 #| label: glimpse-whr-data-2013
 
@@ -659,8 +672,7 @@ dplyr::glimpse(base::readRDS("data/whr/WHR_data_2013.rds"))
 
 ```
 
-Glimpse at ladder score 2013
-:::
+
 
 ::::
 :::::
@@ -675,15 +687,13 @@ Glimpse at ladder score 2013
 ::::::
 :::
 ::::{.my-r-code-container}
-::: {#lst-glimpse-whr-data-2012}
+
 ```{r}
 #| label: glimpse-whr-data-2012
 
 dplyr::glimpse(base::readRDS("data/whr/WHR_data_2012.rds"))
 ```
 
-Glimpse at ladder score 2012
-:::
 
 ::::
 :::::
@@ -712,13 +722,13 @@ Inspecting @exm-inspect-whr-data I have to change the column order for
 
 To leave the original files untouched but to persevere the same structure of the data object names I will rename those five files and append "_raw" at the end of the file name. The new ".rds" object with the two ordered columns (first = country, second = ladder score) will get the same name structure as the objects presented in the code chunks of @exm-inspect-whr-data ("WHR_data_" + year).
 
-:::::{.my-example}
-:::{.my-example-header}
+:::::{.my-code-collection}
+:::{.my-code-collection-header}
 :::::: {#exm-order-whr-columns}
 : Order columns for several data frames
 ::::::
 :::
-::::{.my-example-container}
+::::{.my-code-collection-container}
 
 ::: {.panel-tabset}
 
@@ -731,7 +741,7 @@ To leave the original files untouched but to persevere the same structure of the
 ::::::
 :::
 ::::{.my-r-code-container}
-::: {#lst-whr-order-columns-2022}
+
 ```{r}
 #| label: whr-order-columns-2022
 #| results: hold
@@ -747,8 +757,7 @@ WHR_data_2022 <- WHR_data_2022_raw |>
 dplyr::glimpse(WHR_data_2022)
 pb_save_data_file("whr", WHR_data_2022, "WHR_data_2022.rds")
 ```
-Listing text
-:::
+
 
 ::::
 :::::
@@ -763,7 +772,7 @@ Listing text
 ::::::
 :::
 ::::{.my-r-code-container}
-::: {#lst-whr-order-columns-2021}    
+
 ```{r}
 #| label: whr-order-columns-2021
 #| results: hold
@@ -778,8 +787,6 @@ dplyr::glimpse(WHR_data_2021)
 pb_save_data_file("whr", WHR_data_2021, "WHR_data_2021.rds")
 ```
 
-Listing text
-:::
 
 ::::
 :::::
@@ -793,7 +800,7 @@ Listing text
 ::::::
 :::
 ::::{.my-r-code-container}
-::: {#lst-whr-order-columns-2020}    
+
 ```{r}
 #| label: whr-order-columns-2020
 #| results: hold
@@ -808,8 +815,7 @@ dplyr::glimpse(WHR_data_2020)
 pb_save_data_file("whr", WHR_data_2020, "WHR_data_2020.rds")
 ```
 
-Listing text
-:::
+
 
 ::::
 :::::
@@ -823,7 +829,7 @@ Listing text
 ::::::
 :::
 ::::{.my-r-code-container}
-::: {#lst-whr-order-columns-2015}    
+
 ```{r}
 #| label: whr-order-columns-2015
 #| results: hold
@@ -840,8 +846,6 @@ dplyr::glimpse(WHR_data_2015)
 pb_save_data_file("whr", WHR_data_2015, "WHR_data_2015.rds")
 ```
 
-Listing text
-:::
 
 ::::
 :::::
@@ -855,7 +859,6 @@ Listing text
 ::::::
 :::
 ::::{.my-r-code-container}
-::: {#lst-whr-order-columns-2013}    
 
 2013 is the only year where the data are arranged by country and not by descending ladder score. I will therefore change the sorting to get compatibility with the other years.
 
@@ -874,8 +877,6 @@ dplyr::glimpse(WHR_data_2013)
 pb_save_data_file("whr", WHR_data_2013, "WHR_data_2013.rds")
 ```
 
-Listing text
-:::
 
 ::::
 :::::
@@ -890,9 +891,12 @@ Listing text
 ## Create Dataset 
 
 For comparisons I need a dataset with the variables
+
 - Country (`country`)
 - Ladder score for every year (`l_2012`, `l_2013`, …)
 - Rank for every year (`r_2012`, `r_2013`, …)
+
+
 
 :::::{.my-r-code}
 :::{.my-r-code-header}
@@ -906,9 +910,7 @@ For comparisons I need a dataset with the variables
 #| label: create-whr-dataset
 #| results: hold
 
-pb_create_folder(base::paste0(here::here(), "/data/whr/ladder"))
-
-create_ladder_table <- function(year) {
+pb_create_ladder_table <- function(year) {
     string_orig <- base::paste0("data/whr/WHR_data_", year, ".rds")
     df_orig <- base::readRDS(string_orig)
     df_new <- base::paste0("WHR_", year)
@@ -922,40 +924,40 @@ create_ladder_table <- function(year) {
         dplyr::arrange(country)
 }
 
-ladder_2024 <- create_ladder_table(2024)
+ladder_2024 <- pb_create_ladder_table(2024)
 pb_save_data_file("whr/ladder", ladder_2024, "WHR_ladder_2024.rds")
 
-ladder_2023 <- create_ladder_table(2023)
+ladder_2023 <- pb_create_ladder_table(2023)
 pb_save_data_file("whr/ladder", ladder_2023, "WHR_ladder_2023.rds")
 
-ladder_2022 <- create_ladder_table(2022)
+ladder_2022 <- pb_create_ladder_table(2022)
 pb_save_data_file("whr/ladder", ladder_2022, "WHR_ladder_2022.rds")
 
-ladder_2021 <- create_ladder_table(2021)
+ladder_2021 <- pb_create_ladder_table(2021)
 pb_save_data_file("whr/ladder", ladder_2021, "WHR_ladder_2021.rds")
 
-ladder_2020 <- create_ladder_table(2020)
+ladder_2020 <- pb_create_ladder_table(2020)
 pb_save_data_file("whr/ladder", ladder_2020, "WHR_ladder_2020.rds")
 
-ladder_2019 <- create_ladder_table(2019)
+ladder_2019 <- pb_create_ladder_table(2019)
 pb_save_data_file("whr/ladder", ladder_2019, "WHR_ladder_2019.rds")
 
-ladder_2018 <- create_ladder_table(2018)
+ladder_2018 <- pb_create_ladder_table(2018)
 pb_save_data_file("whr/ladder", ladder_2018, "WHR_ladder_2018.rds")
 
-ladder_2017 <- create_ladder_table(2017)
+ladder_2017 <- pb_create_ladder_table(2017)
 pb_save_data_file("whr/ladder", ladder_2017, "WHR_ladder_2017.rds")
 
-ladder_2016 <- create_ladder_table(2016)
+ladder_2016 <- pb_create_ladder_table(2016)
 pb_save_data_file("whr/ladder", ladder_2016, "WHR_ladder_2016.rds")
 
-ladder_2015 <- create_ladder_table(2015)
+ladder_2015 <- pb_create_ladder_table(2015)
 pb_save_data_file("whr/ladder", ladder_2015, "WHR_ladder_2015.rds")
 
-ladder_2013 <- create_ladder_table(2013)
+ladder_2013 <- pb_create_ladder_table(2013)
 pb_save_data_file("whr/ladder", ladder_2013, "WHR_ladder_2013.rds")
 
-ladder_2012 <- create_ladder_table(2012)
+ladder_2012 <- pb_create_ladder_table(2012)
 pb_save_data_file("whr/ladder", ladder_2012, "WHR_ladder_2012.rds")
 
 
@@ -1046,3 +1048,5 @@ Listing title
 
 ::::
 :::::
+
+
