--- a/09-well-being.qmd
+++ b/09-well-being.qmd
@@ -100,7 +100,10 @@ I will organize the many files into several subfolders:
 
 pb_create_folder(base::paste0(here::here(), "/data/"))
 pb_create_folder(base::paste0(here::here(), "/data/whr"))
-pb_create_folder(base::paste0(here::here(), "/data/whr/ladder"))
+pb_create_folder(base::paste0(here::here(), "/data/whr/excel"))
+pb_create_folder(base::paste0(here::here(), "/data/whr/rds"))
+pb_create_folder(base::paste0(here::here(), "/data/whr/analysis"))
+pb_create_folder(base::paste0(here::here(), "/data/whr/2013-coord"))
 ```
 
 (*For this R code chunk is no output available*)
@@ -144,98 +147,98 @@ I am using the utility package [downloader](https://cran.r-project.org/web/packa
 ## 2024 #########################################
 downloader::download(
     url = "https://happiness-report.s3.amazonaws.com/2024/DataForFigure2.1+with+sub+bars+2024.xls",
-    destfile = base::paste0(here::here(), "/data/whr/WHR-2024.xls")
+    destfile = base::paste0(here::here(), "/data/whr/excel/WHR-2024.xls")
 )
-WHR_data_2024 <- readxl::read_xls(base::paste0(here::here(), "/data/whr/WHR-2024.xls"))
-pb_save_data_file("whr", WHR_data_2024, "WHR_data_2024.rds")
+WHR_data_2024 <- readxl::read_xls(base::paste0(here::here(), "/data/whr/excel/WHR-2024.xls"))
+pb_save_data_file("whr/rds", WHR_data_2024, "WHR_data_2024.rds")
 
 ## 2023 #########################################
 downloader::download(
     url = "https://happiness-report.s3.amazonaws.com/2023/DataForFigure2.1WHR2023.xls",
-    destfile = base::paste0(here::here(), "/data/whr/WHR-2023.xls")
+    destfile = base::paste0(here::here(), "/data/whr/excel/WHR-2023.xls")
 )
-WHR_data_2023 <- readxl::read_xls(base::paste0(here::here(), "/data/whr/WHR-2023.xls"))
-pb_save_data_file("whr", WHR_data_2023, "WHR_data_2023.rds")
+WHR_data_2023 <- readxl::read_xls(base::paste0(here::here(), "/data/whr/excel/WHR-2023.xls"))
+pb_save_data_file("whr/rds", WHR_data_2023, "WHR_data_2023.rds")
 
 ## 2022 #########################################
 downloader::download(
     url = "https://happiness-report.s3.amazonaws.com/2022/Appendix_2_Data_for_Figure_2.1.xls",
-    destfile = base::paste0(here::here(), "/data/whr/WHR-2022.xls")
+    destfile = base::paste0(here::here(), "/data/whr/excel/WHR-2022.xls")
 )
-WHR_data_2022 <- readxl::read_xls(base::paste0(here::here(), "/data/whr/WHR-2022.xls"))
-pb_save_data_file("whr", WHR_data_2022, "WHR_data_2022.rds")
+WHR_data_2022 <- readxl::read_xls(base::paste0(here::here(), "/data/whr/excel/WHR-2022.xls"))
+pb_save_data_file("whr/rds", WHR_data_2022, "WHR_data_2022.rds")
 
 ## 2021 #########################################
 downloader::download(
     url = "https://happiness-report.s3.amazonaws.com/2021/DataForFigure2.1WHR2021C2.xls",
-    destfile = base::paste0(here::here(), "/data/whr/WHR-2021.xls")
+    destfile = base::paste0(here::here(), "/data/whr/excel/WHR-2021.xls")
 )
-WHR_data_2021 <- readxl::read_xls(base::paste0(here::here(), "/data/whr/WHR-2021.xls"))
-pb_save_data_file("whr", WHR_data_2021, "WHR_data_2021.rds")
+WHR_data_2021 <- readxl::read_xls(base::paste0(here::here(), "/data/whr/excel/WHR-2021.xls"))
+pb_save_data_file("whr/rds", WHR_data_2021, "WHR_data_2021.rds")
 
 
 # 2020 #########################################
 downloader::download(
     url = "https://happiness-report.s3.amazonaws.com/2020/WHR20_DataForFigure2.1.xls",
-    destfile = base::paste0(here::here(), "/data/whr/WHR-2020.xls")
+    destfile = base::paste0(here::here(), "/data/whr/excel/WHR-2020.xls")
 )
-WHR_data_2020 <- readxl::read_xls(base::paste0(here::here(), "/data/whr/WHR-2020.xls"))
-pb_save_data_file("whr", WHR_data_2020, "WHR_data_2020.rds")
+WHR_data_2020 <- readxl::read_xls(base::paste0(here::here(), "/data/whr/excel/WHR-2020.xls"))
+pb_save_data_file("whr/rds", WHR_data_2020, "WHR_data_2020.rds")
 
 
 # 2019 #########################################
 downloader::download(
     url = "https://s3.amazonaws.com/happiness-report/2019/Chapter2OnlineData.xls",
-    destfile = base::paste0(here::here(), "/data/whr/WHR-2019.xls")
+    destfile = base::paste0(here::here(), "/data/whr/excel/WHR-2019.xls")
 )
 WHR_data_2019 <- readxl::read_xls(
-    path = base::paste0(here::here(), "/data/whr/WHR-2019.xls"), 
+    path = base::paste0(here::here(), "/data/whr/excel/WHR-2019.xls"), 
     sheet = 2)
-pb_save_data_file("whr", WHR_data_2019, "WHR_data_2019.rds")
+pb_save_data_file("whr/rds", WHR_data_2019, "WHR_data_2019.rds")
 
 
 # 2018 #########################################
 downloader::download(
     url = "https://s3.amazonaws.com/happiness-report/2018/WHR2018Chapter2OnlineData.xls",
-    destfile = base::paste0(here::here(), "/data/whr/WHR-2018.xls")
+    destfile = base::paste0(here::here(), "/data/whr/excel/WHR-2018.xls")
 )
 WHR_data_2018 <- readxl::read_xls(
-    path = base::paste0(here::here(), "/data/whr/WHR-2018.xls"), 
+    path = base::paste0(here::here(), "/data/whr/excel/WHR-2018.xls"), 
     sheet = 2)
-pb_save_data_file("whr", WHR_data_2018, "WHR_data_2018.rds")
+pb_save_data_file("whr/rds", WHR_data_2018, "WHR_data_2018.rds")
 
 
 # 2017 #########################################
 downloader::download(
     url = "https://s3.amazonaws.com/happiness-report/2017/online-data-chapter-2-whr-2017.xlsx",
-    destfile = base::paste0(here::here(), "/data/whr/WHR-2017.xlsx")
+    destfile = base::paste0(here::here(), "/data/whr/excel/WHR-2017.xlsx")
 )
 WHR_data_2017 <- readxl::read_xlsx(
-    path = base::paste0(here::here(), "/data/whr/WHR-2017.xlsx"), 
+    path = base::paste0(here::here(), "/data/whr/excel/WHR-2017.xlsx"), 
     sheet = 3)
-pb_save_data_file("whr", WHR_data_2017, "WHR_data_2017.rds")
+pb_save_data_file("whr/rds", WHR_data_2017, "WHR_data_2017.rds")
 
 
 # 2016 #########################################
 downloader::download(
     url = "https://s3.amazonaws.com/happiness-report/2016/Online-data-for-chapter-2-whr-2016.xlsx",
-    destfile = base::paste0(here::here(), "/data/whr/WHR-2016.xlsx")
+    destfile = base::paste0(here::here(), "/data/whr/excel/WHR-2016.xlsx")
 )
 WHR_data_2016 <- readxl::read_xlsx(
-    path = base::paste0(here::here(), "/data/whr/WHR-2016.xlsx"), 
+    path = base::paste0(here::here(), "/data/whr/excel/WHR-2016.xlsx"), 
     sheet = 3)
-pb_save_data_file("whr", WHR_data_2016, "WHR_data_2016.rds")
+pb_save_data_file("whr/rds", WHR_data_2016, "WHR_data_2016.rds")
 
 # 2015 #########################################
 downloader::download(
     url = "https://s3.amazonaws.com/happiness-report/2015/Chapter2OnlineData_Expanded-with-Trust-and-Governance.xlsx",
-    destfile = base::paste0(here::here(), "/data/whr/WHR-2015.xlsx")
+    destfile = base::paste0(here::here(), "/data/whr/excel/WHR-2015.xlsx")
 )
 WHR_data_2015 <- readxl::read_xlsx(
-    path = base::paste0(here::here(), "/data/whr/WHR-2015.xlsx"), 
+    path = base::paste0(here::here(), "/data/whr/excel/WHR-2015.xlsx"), 
     sheet = 2,
     skip = 3)
-pb_save_data_file("whr", WHR_data_2015, "WHR_data_2015.rds")
+pb_save_data_file("whr/rds", WHR_data_2015, "WHR_data_2015.rds")
 
 ## 2014 missing #######################################
 
@@ -245,7 +248,7 @@ pb_save_data_file("whr", WHR_data_2015, "WHR_data_2015.rds")
 ## store PDF file locally to prevent link rotting
 downloader::download(
     url = "https://s3.amazonaws.com/happiness-report/2013/Chapter-2_online-appendix_9-5-13_final.pdf",
-    destfile = base::paste0(here::here(), "/data/whr/WHR-PDF-2013.pdf")
+    destfile = base::paste0(here::here(), "/data/whr/excel/WHR-PDF-2013.pdf")
 )
 
 ## WHR_data_2013 will be generated and saved in the next section. 
@@ -254,12 +257,12 @@ downloader::download(
 # 2012 #########################################
 downloader::download(
     url = "https://happiness-report.s3.amazonaws.com/2012/2012.xlsx",
-    destfile = base::paste0(here::here(), "/data/whr/WHR-2012.xlsx")
+    destfile = base::paste0(here::here(), "/data/whr/excel/WHR-2012.xlsx")
 )
 WHR_data_2012 <- readxl::read_xlsx(
-    path = base::paste0(here::here(), "/data/whr/WHR-2012.xlsx"), 
+    path = base::paste0(here::here(), "/data/whr/excel/WHR-2012.xlsx"), 
     sheet = 2)
-pb_save_data_file("whr", WHR_data_2012, "WHR_data_2012.rds")
+pb_save_data_file("whr/rds", WHR_data_2012, "WHR_data_2012.rds")
 
 ```
 
@@ -336,8 +339,8 @@ page2_5 <- locate_areas(f, pages = 2)[[1]]
 page6 <- locate_areas(f, pages = 6)[[1]]
 
 
-## store areas coordinates of WHR 2013 PDF data
-pb_create_folder(base::paste0(here::here(), "/data/whr/2013-coord"))
+## store areas coordinates of WHR 2013 PDF data 
+## into "/data/whr/2013-coord" created at @cnj-create-whr-folder
 
 pb_save_data_file("whr/2013-coord", page1, "page1.rds")
 pb_save_data_file("whr/2013-coord", page2_5, "page2_5.rds")
@@ -422,7 +425,7 @@ WHR_data_2013[154, 6] <- 0.355
 WHR_data_2013 <- na.omit(WHR_data_2013)
 
 
-pb_save_data_file("whr", WHR_data_2013, "WHR_data_2013.rds")
+pb_save_data_file("whr/rds", WHR_data_2013, "WHR_data_2013.rds")
 ```
 
 (*For this R code chunk is no output available*)
@@ -465,7 +468,7 @@ pb_save_data_file("whr", WHR_data_2013, "WHR_data_2013.rds")
 ```{r}
 #| label: glimpse-whr-data-2024
 
-dplyr::glimpse(base::readRDS("data/whr/WHR_data_2024.rds"))
+dplyr::glimpse(base::readRDS("data/whr/rds/WHR_data_2024.rds"))
 ```
 
 ::::
@@ -485,7 +488,7 @@ dplyr::glimpse(base::readRDS("data/whr/WHR_data_2024.rds"))
 ```{r}
 #| label: glimpse-whr-data-2023
 
-dplyr::glimpse(base::readRDS("data/whr/WHR_data_2023.rds"))
+dplyr::glimpse(base::readRDS("data/whr/rds/WHR_data_2023.rds"))
 ```
 
 
@@ -505,7 +508,7 @@ dplyr::glimpse(base::readRDS("data/whr/WHR_data_2023.rds"))
 ```{r}
 #| label: glimpse-whr-data-2022
 
-dplyr::glimpse(base::readRDS("data/whr/WHR_data_2022.rds"))
+dplyr::glimpse(base::readRDS("data/whr/rds/WHR_data_2022.rds"))
 ```
 
 
@@ -525,7 +528,7 @@ dplyr::glimpse(base::readRDS("data/whr/WHR_data_2022.rds"))
 ```{r}
 #| label: glimpse-whr-data-2021
 
-dplyr::glimpse(base::readRDS("data/whr/WHR_data_2021.rds"))
+dplyr::glimpse(base::readRDS("data/whr/rds/WHR_data_2021.rds"))
 ```
 
 
@@ -545,7 +548,7 @@ dplyr::glimpse(base::readRDS("data/whr/WHR_data_2021.rds"))
 ```{r}
 #| label: glimpse-whr-data-2020
 
-dplyr::glimpse(base::readRDS("data/whr/WHR_data_2020.rds"))
+dplyr::glimpse(base::readRDS("data/whr/rds/WHR_data_2020.rds"))
 ```
 
 
@@ -565,7 +568,7 @@ dplyr::glimpse(base::readRDS("data/whr/WHR_data_2020.rds"))
 ```{r}
 #| label: glimpse-whr-data-2019
 
-dplyr::glimpse(base::readRDS("data/whr/WHR_data_2019.rds"))
+dplyr::glimpse(base::readRDS("data/whr/rds/WHR_data_2019.rds"))
 ```
 
 
@@ -586,7 +589,7 @@ dplyr::glimpse(base::readRDS("data/whr/WHR_data_2019.rds"))
 ```{r}
 #| label: glimpse-whr-data-2018
 
-dplyr::glimpse(base::readRDS("data/whr/WHR_data_2018.rds"))
+dplyr::glimpse(base::readRDS("data/whr/rds/WHR_data_2018.rds"))
 ```
 
 
@@ -606,7 +609,7 @@ dplyr::glimpse(base::readRDS("data/whr/WHR_data_2018.rds"))
 ```{r}
 #| label: glimpse-whr-data-2017
 
-dplyr::glimpse(base::readRDS("data/whr/WHR_data_2017.rds"))
+dplyr::glimpse(base::readRDS("data/whr/rds/WHR_data_2017.rds"))
 ```
 
 
@@ -626,7 +629,7 @@ dplyr::glimpse(base::readRDS("data/whr/WHR_data_2017.rds"))
 ```{r}
 #| label: glimpse-whr-data-2016
 
-dplyr::glimpse(base::readRDS("data/whr/WHR_data_2016.rds"))
+dplyr::glimpse(base::readRDS("data/whr/rds/WHR_data_2016.rds"))
 ```
 
 
@@ -648,7 +651,7 @@ dplyr::glimpse(base::readRDS("data/whr/WHR_data_2016.rds"))
 ```{r}
 #| label: glimpse-whr-data-2015
 
-dplyr::glimpse(base::readRDS("data/whr/WHR_data_2015.rds"))
+dplyr::glimpse(base::readRDS("data/whr/rds/WHR_data_2015.rds"))
 ```
 
 
@@ -668,7 +671,7 @@ dplyr::glimpse(base::readRDS("data/whr/WHR_data_2015.rds"))
 ```{r}
 #| label: glimpse-whr-data-2013
 
-dplyr::glimpse(base::readRDS("data/whr/WHR_data_2013.rds"))
+dplyr::glimpse(base::readRDS("data/whr/rds/WHR_data_2013.rds"))
 
 ```
 
@@ -691,7 +694,7 @@ dplyr::glimpse(base::readRDS("data/whr/WHR_data_2013.rds"))
 ```{r}
 #| label: glimpse-whr-data-2012
 
-dplyr::glimpse(base::readRDS("data/whr/WHR_data_2012.rds"))
+dplyr::glimpse(base::readRDS("data/whr/rds/WHR_data_2012.rds"))
 ```
 
 
@@ -747,15 +750,15 @@ To leave the original files untouched but to persevere the same structure of the
 #| results: hold
 
 
-WHR_data_2022_raw <-  base::readRDS("data/whr/WHR_data_2022.rds")
-pb_save_data_file("whr", WHR_data_2022_raw, "WHR_data_2022_raw.rds")
+WHR_data_2022_raw <-  base::readRDS("data/whr/rds/WHR_data_2022.rds")
+pb_save_data_file("whr/rds", WHR_data_2022_raw, "WHR_data_2022_raw.rds")
 
 WHR_data_2022 <- WHR_data_2022_raw |> 
     dplyr::relocate("RANK", .after = last_col())
 
 
 dplyr::glimpse(WHR_data_2022)
-pb_save_data_file("whr", WHR_data_2022, "WHR_data_2022.rds")
+pb_save_data_file("whr/rds", WHR_data_2022, "WHR_data_2022.rds")
 ```
 
 
@@ -777,14 +780,14 @@ pb_save_data_file("whr", WHR_data_2022, "WHR_data_2022.rds")
 #| label: whr-order-columns-2021
 #| results: hold
 
-WHR_data_2021_raw <-  base::readRDS("data/whr/WHR_data_2021.rds")
-pb_save_data_file("whr", WHR_data_2021_raw, "WHR_data_2021_raw.rds")
+WHR_data_2021_raw <-  base::readRDS("data/whr/rds/WHR_data_2021.rds")
+pb_save_data_file("whr/rds", WHR_data_2021_raw, "WHR_data_2021_raw.rds")
 
 WHR_data_2021 <- WHR_data_2021_raw |> 
     dplyr::relocate("Regional indicator", .after = "Ladder score")
 
 dplyr::glimpse(WHR_data_2021)
-pb_save_data_file("whr", WHR_data_2021, "WHR_data_2021.rds")
+pb_save_data_file("whr/rds", WHR_data_2021, "WHR_data_2021.rds")
 ```
 
 
@@ -805,14 +808,14 @@ pb_save_data_file("whr", WHR_data_2021, "WHR_data_2021.rds")
 #| label: whr-order-columns-2020
 #| results: hold
 
-WHR_data_2020_raw <-  base::readRDS("data/whr/WHR_data_2020.rds")
-pb_save_data_file("whr", WHR_data_2020_raw, "WHR_data_2020_raw.rds")
+WHR_data_2020_raw <-  base::readRDS("data/whr/rds/WHR_data_2020.rds")
+pb_save_data_file("whr/rds", WHR_data_2020_raw, "WHR_data_2020_raw.rds")
 
 WHR_data_2020 <- WHR_data_2020_raw |> 
     dplyr::relocate("Regional indicator", .after = "Ladder score")
 
 dplyr::glimpse(WHR_data_2020)
-pb_save_data_file("whr", WHR_data_2020, "WHR_data_2020.rds")
+pb_save_data_file("whr/rds", WHR_data_2020, "WHR_data_2020.rds")
 ```
 
 
@@ -834,8 +837,8 @@ pb_save_data_file("whr", WHR_data_2020, "WHR_data_2020.rds")
 #| label: whr-order-columns-2015
 #| results: hold
 
-WHR_data_2015_raw <-  base::readRDS("data/whr/WHR_data_2015.rds")
-pb_save_data_file("whr", WHR_data_2015_raw, "WHR_data_2015_raw.rds")
+WHR_data_2015_raw <-  base::readRDS("data/whr/rds/WHR_data_2015.rds")
+pb_save_data_file("whr/rds", WHR_data_2015_raw, "WHR_data_2015_raw.rds")
 
 
 WHR_data_2015 <- WHR_data_2015_raw  |> 
@@ -843,7 +846,7 @@ WHR_data_2015 <- WHR_data_2015_raw  |>
     dplyr::relocate("Regional indicator", .after = "Ladder score")
 
 dplyr::glimpse(WHR_data_2015)
-pb_save_data_file("whr", WHR_data_2015, "WHR_data_2015.rds")
+pb_save_data_file("whr/rds", WHR_data_2015, "WHR_data_2015.rds")
 ```
 
 
@@ -866,15 +869,15 @@ pb_save_data_file("whr", WHR_data_2015, "WHR_data_2015.rds")
 #| label: whr-order-columns-2013
 #| results: hold
 
-WHR_data_2013_raw <-  base::readRDS("data/whr/WHR_data_2013.rds")
-pb_save_data_file("whr", WHR_data_2013_raw, "WHR_data_2013_raw.rds")
+WHR_data_2013_raw <-  base::readRDS("data/whr/rds/WHR_data_2013.rds")
+pb_save_data_file("whr/rds", WHR_data_2013_raw, "WHR_data_2013_raw.rds")
 
 WHR_data_2013 <- WHR_data_2013_raw |> 
     dplyr::relocate("Region", .after = "Ladder") |> 
     dplyr::arrange(dplyr::desc(Ladder))
 
 dplyr::glimpse(WHR_data_2013)
-pb_save_data_file("whr", WHR_data_2013, "WHR_data_2013.rds")
+pb_save_data_file("whr/rds", WHR_data_2013, "WHR_data_2013.rds")
 ```
 
 
@@ -911,7 +914,7 @@ For comparisons I need a dataset with the variables
 #| results: hold
 
 pb_create_ladder_table <- function(year) {
-    string_orig <- base::paste0("data/whr/WHR_data_", year, ".rds")
+    string_orig <- base::paste0("data/whr/rds/WHR_data_", year, ".rds")
     df_orig <- base::readRDS(string_orig)
     df_new <- base::paste0("WHR_", year)
     l_year <- paste0("l_", year)
@@ -925,40 +928,40 @@ pb_create_ladder_table <- function(year) {
 }
 
 ladder_2024 <- pb_create_ladder_table(2024)
-pb_save_data_file("whr/ladder", ladder_2024, "WHR_ladder_2024.rds")
+pb_save_data_file("whr/analysis", ladder_2024, "WHR_ladder_2024.rds")
 
 ladder_2023 <- pb_create_ladder_table(2023)
-pb_save_data_file("whr/ladder", ladder_2023, "WHR_ladder_2023.rds")
+pb_save_data_file("whr/analysis", ladder_2023, "WHR_ladder_2023.rds")
 
 ladder_2022 <- pb_create_ladder_table(2022)
-pb_save_data_file("whr/ladder", ladder_2022, "WHR_ladder_2022.rds")
+pb_save_data_file("whr/analysis", ladder_2022, "WHR_ladder_2022.rds")
 
 ladder_2021 <- pb_create_ladder_table(2021)
-pb_save_data_file("whr/ladder", ladder_2021, "WHR_ladder_2021.rds")
+pb_save_data_file("whr/analysis", ladder_2021, "WHR_ladder_2021.rds")
 
 ladder_2020 <- pb_create_ladder_table(2020)
-pb_save_data_file("whr/ladder", ladder_2020, "WHR_ladder_2020.rds")
+pb_save_data_file("whr/analysis", ladder_2020, "WHR_ladder_2020.rds")
 
 ladder_2019 <- pb_create_ladder_table(2019)
-pb_save_data_file("whr/ladder", ladder_2019, "WHR_ladder_2019.rds")
+pb_save_data_file("whr/analysis", ladder_2019, "WHR_ladder_2019.rds")
 
 ladder_2018 <- pb_create_ladder_table(2018)
-pb_save_data_file("whr/ladder", ladder_2018, "WHR_ladder_2018.rds")
+pb_save_data_file("whr/analysis", ladder_2018, "WHR_ladder_2018.rds")
 
 ladder_2017 <- pb_create_ladder_table(2017)
-pb_save_data_file("whr/ladder", ladder_2017, "WHR_ladder_2017.rds")
+pb_save_data_file("whr/analysis", ladder_2017, "WHR_ladder_2017.rds")
 
 ladder_2016 <- pb_create_ladder_table(2016)
-pb_save_data_file("whr/ladder", ladder_2016, "WHR_ladder_2016.rds")
+pb_save_data_file("whr/analysis", ladder_2016, "WHR_ladder_2016.rds")
 
 ladder_2015 <- pb_create_ladder_table(2015)
-pb_save_data_file("whr/ladder", ladder_2015, "WHR_ladder_2015.rds")
+pb_save_data_file("whr/analysis", ladder_2015, "WHR_ladder_2015.rds")
 
 ladder_2013 <- pb_create_ladder_table(2013)
-pb_save_data_file("whr/ladder", ladder_2013, "WHR_ladder_2013.rds")
+pb_save_data_file("whr/analysis", ladder_2013, "WHR_ladder_2013.rds")
 
 ladder_2012 <- pb_create_ladder_table(2012)
-pb_save_data_file("whr/ladder", ladder_2012, "WHR_ladder_2012.rds")
+pb_save_data_file("whr/analysis", ladder_2012, "WHR_ladder_2012.rds")
 
 
 whr_join_raw <- dplyr::full_join(ladder_2024, ladder_2023, by = "country") |> 
@@ -974,7 +977,7 @@ whr_join_raw <- dplyr::full_join(ladder_2024, ladder_2023, by = "country") |>
     dplyr::full_join(ladder_2012, by = "country")
 
 
-pb_save_data_file("whr/ladder", whr_join_raw, "whr_join_raw.rds")
+pb_save_data_file("whr/analysis", whr_join_raw, "whr_join_raw.rds")
 ```
 
 Listing title
