--- a/references.bib
+++ b/references.bib
@@ -394,3 +394,14 @@
 Citation Key: nilsson{\_}2024},
 	langid = {en}
 }
+
+@misc{berroth-2019,
+	title = {Bang Bang - How to program with dplyr},
+	author = {Berroth, Markus},
+	year = {2019},
+	month = {07},
+	date = {2019-07-10},
+	url = {https://www.statworx.com/en/content-hub/blog/bang-bang-how-to-program-with-dplyr/},
+	note = {Citation Key: berroth-2019},
+	langid = {canadian}
+}
